# codex

codex-rs/: Cargo.toml
codex-rs/app-server/: Cargo.toml  README.md
codex-rs/app-server/src/: bespoke_event_handling.rs  codex_message_processor.rs  in_process.rs  lib.rs  message_processor.rs  thread_state.rs
codex-rs/bridges/core/: Cargo.toml
codex-rs/bridges/core/src/: app_server.rs  lib.rs  processing.rs  types.rs
codex-rs/bridges/telegram/: Cargo.toml
codex-rs/bridges/telegram/src/: bridge.rs  config.rs  lib.rs  reply_relay.rs  state.rs  telegram_api.rs  types.rs
codex-rs/cli/: Cargo.toml
codex-rs/cli/src/: main.rs
codex-rs/docs/: telegram_bridge.md
codex-rs/exec/: Cargo.toml
codex-rs/exec/src/: lib.rs
codex-rs/otel/: README.md
codex-rs/tui/: Cargo.toml
codex-rs/tui/src/: app.rs
